tests/valid/type_safety_ready_gap/annotated_let.facet
fn main() -> unrestricted () {
    let x: unrestricted isize = 1 in
    ()
}
